--- a/templates/actors/actor-sheet.html
+++ b/templates/actors/actor-sheet.html
@@ -7,19 +7,19 @@
     {{! Sheet Tab Navigation }}
     <nav class="sheet-tabs tabs flexrow" data-group="primary">
       <a class="item" data-tab="stats">
-        {{localize "WITCHER.Tab.Stats"}}
+        {{localize "WITCHER.TabStats"}}
       </a>
       <a class="item" data-tab="abilities">
-        {{localize "WITCHER.Tab.Abilities"}}
+        {{localize "WITCHER.TabAbilities"}}
       </a>
       <a class="item" data-tab="magic">
-        {{localize "WITCHER.Tab.Magic"}}
+        {{localize "WITCHER.TabMagic"}}
       </a>
       <a class="item" data-tab="inventory">
-        {{localize "WITCHER.Tab.Inventory"}}
+        {{localize "WITCHER.TabInventory"}}
       </a>
       <a class="item" data-tab="background">
-        {{localize "WITCHER.Tab.Background"}}
+        {{localize "WITCHER.TabBackground"}}
       </a>
 
 
